--- a/CV.html
+++ b/CV.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <img class="avatar" src="\头像.png" alt="头像">
-        <h1>甘润林</h1>
-        <p>应聘前端工程师</p>
+        <h4>甘润林</h4>
+        <h4>应聘前端工程师</h4>
     </header>
     
     <div class="left">
         <div class="basic"> 
-            <h2>基本信息</h2>
+            <h2>基本信息</h2> 
             <ul>
                 <li class="icon-tel">12312312344</li> 
                 <li class="icon-wechat">ganrunlin</li> 
@@ -26,7 +26,7 @@
         </div>
 
         <div class="skills">
-            <h2>掌握技能</h2>
+            <h2>掌握技能</h2> 
             <ul>
                 <li>掌握HTML5/CSS3</li>
                 <li>熟悉传统CSS布局、Flex布局、Grid布局和移动端适配等</li>
@@ -41,17 +41,21 @@
     <div class="right">
         <div class="edu">
             <h2>教育经历</h2>
-            <p class="edu-1">2016/09 ~ 2020/06</p> 
-            <p class="edu-1">上海师范大学</p> 
-            <p class="edu-1">电子信息工程</p> 
-            <p class="edu-1">获得校级优秀实习生</p> 
+            <div class="edu-1">
+                <span class="edu-2">2016/09 ~ 2020/06</span> 
+                <span class="edu-2"><b>上海师范大学</b></span> 
+                <span class="edu-2">电子信息工程</span> 
+             </div>
+            <p>获得校级优秀实习生</p> 
         </div>
 
         <div class="expr">
             <h2>工作经历</h2>
-            <p class="expr-1">2020/09 ~ 2022/03</p> 
-            <p class="expr-1">XXXXX公司</p> 
-            <p class="expr-1">前端工程师</p> 
+            <div class="expr-1">
+                <span class="expr-2">2020/09 ~ 2022/03</span> 
+                <span class="expr-2"><b>XXXXX公司</b></span> 
+                <span class="expr-2">前端工程师</span>
+            </div> 
             <ul>
                 <li>项目介绍： 该项目的目的是搭建线上学习平台，把线下课堂的完整学习流程搬到线上，
                     平台包括课程展示、购买、直播、录播、作业、权限管理、停课复课、试听等几十个大功能。
@@ -63,7 +67,20 @@
         </div>
 
         <div class="proj">
-
+            <h2>项目经历</h2>
+            <div class="proj-1">
+                <span class="proj-2">2020/09 ~ 2022/03</span> 
+                <span class="proj-2"><b>XXXXX项目</b></span> 
+                <span class="proj-2">自定项目</span> 
+            </div>
+            <ul>
+                <li>项目介绍： 该项目的目的是搭建线上学习平台，把线下课堂的完整学习流程搬到线上，
+                    平台包括课程展示、购买、直播、录播、作业、权限管理、停课复课、试听等几十个大功能。
+                    该项目采用前后分离的技术方案， 我主要负责前端部分的开发。项目前端部分使用Vue技术栈，
+                    移动端平台使用自己实现的vue ui组件库。</li>
+                <li>技术栈：vue、vue-router、vuex、element-ui、typescript、webpack、es6、移动端</li>
+                <li>项目成果: 项目支撑饥人谷日常教学活动、运营活动的正常开展，支持数千学生的日常线上学习，几十万用户的日常访问。</li>
+            </ul>
         </div>
     </div>
     <footer>
