--- a/CV.html
+++ b/CV.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\CV.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_3131088_xqvl1lslqp.css">
     <title>我的在线简历</title>
 </head>
 <body>
@@ -16,16 +17,18 @@
     
     <div class="left">
         <div class="basic"> 
+            <span class="iconfont icon-ava"></span>
             <h2>基本信息</h2> 
             <ul>
-                <li class="icon-tel">12312312344</li> 
-                <li class="icon-wechat">ganrunlin</li> 
-                <li class="icon-email">ganrunlin@qq.com</li> 
-                <li class="icon-edu">本科</li> 
+                <li class="iconfont icon-phone">12312312344</li> 
+                <li class="iconfont icon-wechat">ganrunlin</li> 
+                <li class="iconfont icon-mail">ganrunlin@qq.com</li> 
+                <li class="iconfont icon-edu">本科</li> 
             </ul>
         </div>
 
         <div class="skills">
+            <span class="iconfont icon-tool"></span>
             <h2>掌握技能</h2> 
             <ul>
                 <li>掌握HTML5/CSS3</li>
