--- a/CV.html
+++ b/CV.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\CV.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_3131088_xqvl1lslqp.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_3131088_9any2ncdx1d.css">
     <title>我的在线简历</title>
 </head>
 <body>
@@ -43,22 +43,28 @@
 
     <div class="right">
         <div class="edu">
+            <span class="iconfont icon-edu"></span>
             <h2>教育经历</h2>
-            <div class="edu-1">
-                <span class="edu-2">2016/09 ~ 2020/06</span> 
-                <span class="edu-2"><b>上海师范大学</b></span> 
-                <span class="edu-2">电子信息工程</span> 
-             </div>
-            <p>获得校级优秀实习生</p> 
+            <div class="intro">
+                <span>2016/09 ~ 2020/06</span>
+                <span><b>上海师范大学</b></span> 
+                <span>电子信息工程</span> 
+            </div>
+            <ul>
+                <li>获得校级优秀实习生</li> 
+            </ul>    
+        
         </div>
 
+
         <div class="expr">
+            <span class="iconfont icon-work"></span>
             <h2>工作经历</h2>
-            <div class="expr-1">
-                <span class="expr-2">2020/09 ~ 2022/03</span> 
-                <span class="expr-2"><b>XXXXX公司</b></span> 
-                <span class="expr-2">前端工程师</span>
-            </div> 
+            <div class="intro">
+                <span>2020/09 ~ 2022/03</span> 
+                <span><b>XXXXX公司</b></span> 
+                <span>前端工程师</span>
+            </div>
             <ul>
                 <li>项目介绍： 该项目的目的是搭建线上学习平台，把线下课堂的完整学习流程搬到线上，
                     平台包括课程展示、购买、直播、录播、作业、权限管理、停课复课、试听等几十个大功能。
@@ -70,11 +76,12 @@
         </div>
 
         <div class="proj">
+            <span class="iconfont icon-project"></span>
             <h2>项目经历</h2>
-            <div class="proj-1">
-                <span class="proj-2">2020/09 ~ 2022/03</span> 
-                <span class="proj-2"><b>XXXXX项目</b></span> 
-                <span class="proj-2">自定项目</span> 
+            <div class="intro">
+                <span>2020/09 ~ 2022/03</span> 
+                <span><b>XXXXX项目</b></span> 
+                <span>自定项目</span> 
             </div>
             <ul>
                 <li>项目介绍： 该项目的目的是搭建线上学习平台，把线下课堂的完整学习流程搬到线上，
