--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="GBK">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\CV.css">
+    <link rel="stylesheet" href="./CV.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_3131088_9any2ncdx1d.css">
     <title>我的在线简历</title>
 </head>
