update css wq! a

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="avatar" src="./头像.png" alt="头像">
+        <img class="avatar" src="/avatar.png" alt="头像">
         <h4>甘润林</h4>
         <h4>应聘前端工程师</h4>
     </header>
